--- a/app/src/main/res/layout/activity_add_client.xml
+++ b/app/src/main/res/layout/activity_add_client.xml
@@ -17,6 +17,70 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sexe"
+        ></TextView>
+
+    <RadioGroup
+        android:id="@+id/add_client_gender_radiogroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <RadioButton
+            android:id="@+id/add_client_gender_man_radiobutton"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/man"
+            android:layout_height="wrap_content" />
+        <RadioButton
+            android:id="@+id/add_client_gender_woman_radiobutton"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/woman"
+            android:layout_height="wrap_content" />
+    </RadioGroup>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/age"
+        ></TextView>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:id="@+id/add_client_age_textview"
+                tools:text="30"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        <SeekBar
+                android:id="@+id/add_client_age_seekbar"
+                android:min="18"
+                android:max="65"
+                android:layout_width="match_parent"
+        android:layout_height="wrap_content"></SeekBar>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/level"
+        ></TextView>
+
+    <Spinner
+        android:id="@+id/add_client_level_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/levels"
+        android:spinnerMode="dialog" />
+
+
+
     <Button
         android:id="@+id/add_client_button"
         android:layout_width="match_parent"
