--- a/app/src/main/res/layout/activity_list_client.xml
+++ b/app/src/main/res/layout/activity_list_client.xml
@@ -9,5 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_client_recyclerview"
         android:layout_width="409dp"
-        android:layout_height="729dp" />
+        android:layout_height="729dp"
+        tools:itemCount="80"
+        tools:listitem="@layout/client_view" />
 </FrameLayout>
