--- a/app/src/main/res/layout/country_view.xml
+++ b/app/src/main/res/layout/country_view.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/country_cardview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    card_view:cardCornerRadius="4dp">
+    android:elevation="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,7 +16,8 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/country_flag" />
 
         <TextView
             android:id="@+id/country_name_textview"
@@ -25,7 +26,7 @@
             android:layout_toEndOf="@id/country_flag_imageview"
             android:layout_marginStart="16dp"
             android:text="Country Name"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
     </RelativeLayout>
-
 </androidx.cardview.widget.CardView>
