--- a/app/src/main/res/layout/activity_country_list.xml
+++ b/app/src/main/res/layout/activity_country_list.xml
@@ -1,4 +1,3 @@
-<!-- activity_country_list.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,11 +6,17 @@
     android:orientation="vertical"
     tools:context=".CountryListActivity">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/country_search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:queryHint="@string/search_hint" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/country_list_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-</LinearLayout>
 
+</LinearLayout>
