--- a/app/src/main/res/layout/activity_country_list.xml
+++ b/app/src/main/res/layout/activity_country_list.xml
@@ -6,11 +6,28 @@
     android:orientation="vertical"
     tools:context=".CountryListActivity">
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/country_search_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:queryHint="@string/search_hint" />
+        android:orientation="horizontal"
+        android:padding="16dp">
+
+        <Button
+            android:id="@+id/filterFavoritesButton"
+            android:layout_width="72dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:padding="5dp"
+            android:text="Favorits"
+            android:textSize="10sp" />
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/country_search_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:queryHint="@string/search_hint" />
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/country_list_recyclerview"
