--- a/app/src/main/res/layout/country_view.xml
+++ b/app/src/main/res/layout/country_view.xml
@@ -28,5 +28,18 @@
             android:text="Country Name"
             android:textSize="18sp"
             android:textStyle="bold" />
+
+        <ImageButton
+            android:id="@+id/favorite_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_star_outline"
+            android:background="@android:color/transparent"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
+            android:contentDescription="@string/add_to_favorites" />
+
     </RelativeLayout>
+
 </androidx.cardview.widget.CardView>
