--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="tresbelle">#FBC02D</color>
+    <color name="correct_green">#00FF00</color>
+    <color name="incorrect_red">#FF0000</color>
+
+
 </resources>
