--- a/app/src/main/res/layout/activity_country_details.xml
+++ b/app/src/main/res/layout/activity_country_details.xml
@@ -112,5 +112,11 @@
             android:textSize="16sp"
             android:layout_marginBottom="16dp" />
 
+        <org.osmdroid.views.MapView
+            android:id="@+id/map_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
     </LinearLayout>
 </layout>
