--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,25 +1,52 @@
-<!-- res/layout/activity_home.xml -->
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-    <Button
-        android:id="@+id/home_list_button"
+    <TextView
+        android:id="@+id/app_name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Liste des pays"
+        android:text="GeoQuiz"
+        android:textSize="60sp"
+        android:textStyle="bold"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:layout_centerVertical="true" />
+        android:layout_marginTop="16dp" />
+
+    <ImageView
+        android:id="@+id/app_logo_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/app_name_textview"
+        android:layout_marginTop="1dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="0dp"
+        android:src="@drawable/logo" />
+
+    <Button
+        android:id="@+id/home_list_button"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:text="Liste des pays"
+        android:textColor="@android:color/white"
+        android:background="@drawable/rounded_bouton"
+        android:layout_below="@id/app_logo_imageview"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp" />
 
     <Button
         android:id="@+id/home_play_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
         android:text="Jouer"
+        android:background="@drawable/rounded_bouton"
+        android:textColor="@android:color/white"
         android:layout_below="@id/home_list_button"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp" />
+
 
 </RelativeLayout>
